LOGO DISPLAY AND CLEAR BUTTON UPDATED

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,9 +33,10 @@
                 -->
                 <div class="buttons"> 
     	            <button  class="contact" id="connect-btn">Connect</button>
-                    <button  class="contact" id="clear-logo-btn">Clear Logo / KML</button>
                     <button  class="contact" id="show-logo-btn">Show Logo</button>
+                    <button  class="contact" id="clear-logo-btn">Clear Logo </button>
                     <button  class="contact" id="show-kml-btn">Show Location</button>
+                    <button  class="contact" id="clear-kml-btn">Clear KML</button>
                     <button  class="contact" id="relaunch-btn">Relaunc LG</button>
                     <button  class="contact" id="reboot_btn">Reboot</button>
                     <button  class="contact" id="power_off_btn">Power Off</button>
